--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,34 @@
-VERSION_CODE=4800
-VERSION_NAME=0.4.8
-GROUP=com.github.ctiao
-POM_NAME=dfm
-POM_ARTIFACT_ID=common
-POM_PACKAGING=aar
-
-POM_DESCRIPTION=A Danmaku render library.
-POM_URL=https://github.com/ctiao/DanmakuFlameMaster
-POM_SCM_URL=https://github.com/ctiao/DanmakuFlameMaster
-POM_SCM_CONNECTION=scm:git:git://github.com/ctiao/DanmakuFlameMaster.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ctiao/DanmakuFlameMaster.git
-
-POM_LICENCE_NAME=The Apache Software License, Version 2.0
-POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST=repo
-
-POM_DEVELOPER_ID=calmer91
-POM_DEVELOPER_NAME=Chen Hui
+## Project-wide Gradle settings.
+#
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx10248m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Mon Jun 20 15:52:02 CST 2016
 POM_DEVELOPER_EMAIL=calmer91@gmail.com
+POM_SCM_URL=https\://github.com/ctiao/DanmakuFlameMaster
+POM_DEVELOPER_ID=calmer91
+POM_LICENCE_DIST=repo
+systemProp.http.proxyHost=localhost
+POM_ARTIFACT_ID=common
+POM_DEVELOPER_NAME=Chen Hui
+POM_LICENCE_URL=http\://www.apache.org/licenses/LICENSE-2.0.txt
+POM_DESCRIPTION=A Danmaku render library.
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_NAME=dfm
+POM_PACKAGING=aar
+VERSION_NAME=0.4.8
+VERSION_CODE=4800
+POM_SCM_DEV_CONNECTION=scm\:git\:ssh\://git@github.com/ctiao/DanmakuFlameMaster.git
+POM_URL=https\://github.com/ctiao/DanmakuFlameMaster
+POM_SCM_CONNECTION=scm\:git\:git\://github.com/ctiao/DanmakuFlameMaster.git
+GROUP=com.github.ctiao
+systemProp.http.proxyPort=1080
